--- a/media/app/templates/app/index.html
+++ b/media/app/templates/app/index.html
@@ -58,5 +58,83 @@
     </div>
   </div>
 </div>
+<!-- ********************************** -->
 
+
+
+<div class="panel-group1">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse1">Sport Channels</a>
+        </h4>
+      </div>
+      <div id="collapse1" class="panel-collapse collapse">
+        <ul class="list-group">
+        {% for tvsport in tvssport %}
+          <li class="list-group-item"><img src="{{tvsport.tv_img.url}}" alt="" width="60px" height="60px"><span>{{tvsport.tv_name}}</span></li>
+          {% endfor %}
+        </ul>
+        <div class="panel-footer">Footer</div>
+      </div>
+    </div>
+</div>
+
+<div class="panel-group2">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse1">Drama Channels</a>
+        </h4>
+      </div>
+      <div id="collapse1" class="panel-collapse collapse">
+        <ul class="list-group">
+        {% for tvdrama in tvsdrama %}
+          <li class="list-group-item"><img src="{{tvdrama.tv_img.url}}" alt="" width="60px" height="60px"><span>{{tvdrama.tv_name}}</span></li>
+          {% endfor %}
+        </ul>
+        <div class="panel-footer">Footer</div>
+      </div>
+    </div>
+</div>
+
+
+<!-- ++++++++++++++++++++++++++++ -->
+
+<div class="panel-group">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse1">Collapsible list group</a>
+        </h4>
+      </div>
+      <div id="collapse1" class="panel-collapse collapse">
+        <ul class="list-group">
+          <li class="list-group-item">One</li>
+          <li class="list-group-item">Two</li>
+          <li class="list-group-item">Three</li>
+        </ul>
+        <div class="panel-footer">Footer</div>
+      </div>
+    </div>
+  </div>
+  <!-- +++++++++++++++++++++++++ -->
+
+  <div class="panel-group">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse1">Collapsible list group</a>
+        </h4>
+      </div>
+      <div id="collapse1" class="panel-collapse collapse">
+        <ul class="list-group">
+          <li class="list-group-item">One</li>
+          <li class="list-group-item">Two</li>
+          <li class="list-group-item">Three</li>
+        </ul>
+        <div class="panel-footer">Footer</div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
