--- a/media/app/templates/app/radioplayer.html
+++ b/media/app/templates/app/radioplayer.html
@@ -2,21 +2,16 @@
 {% block content %}
 
 <div class="row">
-<div class="col-md-6">
-<div class="title"><h3>{{radioitem.radio_name}}</h3></div>
+<div class="col-md text-center">
+    <div class="title"><h3>{{radioitem.radio_name}}</h3></div>
+    <div><img src="{{radioitem.radio_img.url}}" alt=""></div>
 
-<div><audio controls>
-  <!-- <source src="{{radioitem.radio_link}}" type="audio/ogg"> -->
-  <source src="https://{{radioitem.radio_link}}" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio></div>    
-<div>
-    <audio controls='controls'>
-                <!-- <source src="{{track.source.url}}"> -->
-                <!-- <source src="{{radioitem.radio_link}}"> -->
-                <source src="https://{{radioitem.radio_link}}">
-            </audio>
-</div>
+    <div><audio controls>
+    <!-- <source src="{{radioitem.radio_link}}" type="audio/ogg"> -->
+    <source src="{{radioitem.radio_link}}" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio></div>    
+
 </div>
 </div>
 
