--- a/media/app/templates/app/radioplayer.html
+++ b/media/app/templates/app/radioplayer.html
@@ -6,7 +6,7 @@
     <div class="title"><h3>{{radioitem.radio_name}}</h3></div>
     <div><img src="{{radioitem.radio_img.url}}" alt=""></div>
 
-    <div><audio controls>
+    <div style="margin:20px"><audio controls>
     <!-- <source src="{{radioitem.radio_link}}" type="audio/ogg"> -->
     <source src="{{radioitem.radio_link}}" type="audio/mpeg">
     Your browser does not support the audio element.
