--- a/media/app/templates/app/index.html
+++ b/media/app/templates/app/index.html
@@ -1,7 +1,23 @@
 {% extends 'app/main.html' %}
 {% block content %}
 
-
+<div class="panel-group">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse1">Religion Channels</a>
+        </h4>
+      </div>
+      <div id="collapse1" class="panel-collapse collapse">
+        <ul class="list-group">
+        {% for tvrel in tvsrel %}
+          <li class="list-group-item"> <a href="{% url 'player' tvrel.id%}"><img src="{{tvrel.tv_img.url}}" alt="" width="60px" height="60px"><span> {{tvrel.tv_name}}</span></a> </li>
+          {% endfor %}
+        </ul>
+        
+      </div>
+    </div>
+</div>
 
 <div class="panel-group">
     <div class="panel">
@@ -13,7 +29,7 @@
       <div id="collapse1" class="panel-collapse collapse">
         <ul class="list-group">
         {% for tvsport in tvssport %}
-          <li class="list-group-item"><a href="{% url 'player' tvsport.id %}"><img src="{{tvsport.tv_img.url}}" alt="" width="60px" height="60px"><span>{{tvsport.tv_name}}</span></a> </li>
+          <li class="list-group-item"><a href="{% url 'player' tvsport.id %}"><img src="{{tvsport.tv_img.url}}" alt="" width="60px" height="60px"><span> {{tvsport.tv_name}}</span></a> </li>
           {% endfor %}
         </ul>
         
@@ -31,7 +47,7 @@
       <div id="collapse1" class="panel-collapse collapse">
         <ul class="list-group">
         {% for tvdrama in tvsdrama %}
-          <li class="list-group-item"> <a href="{% url 'player' tvdrama.id%}"><img src="{{tvdrama.tv_img.url}}" alt="" width="60px" height="60px"><span>{{tvdrama.tv_name}}</span></a> </li>
+          <li class="list-group-item"> <a href="{% url 'player' tvdrama.id%}"><img src="{{tvdrama.tv_img.url}}" alt="" width="60px" height="60px"><span> {{tvdrama.tv_name}}</span></a> </li>
           {% endfor %}
         </ul>
         
@@ -49,7 +65,7 @@
       <div id="collapse1" class="panel-collapse collapse">
         <ul class="list-group">
         {% for tvnews in tvsnews %}
-          <li class="list-group-item"> <a href="{% url 'player' tvnews.id%}"><img src="{{tvnews.tv_img.url}}" alt="" width="60px" height="60px"><span>{{tvnews.tv_name}}</span></a> </li>
+          <li class="list-group-item"> <a href="{% url 'player' tvnews.id%}"><img src="{{tvnews.tv_img.url}}" alt="" width="60px" height="60px"><span> {{tvnews.tv_name}}</span></a> </li>
           {% endfor %}
         </ul>
         
@@ -58,7 +74,7 @@
 </div>
 <!-- ++++++++++++++++++++++++++++ -->
 
-<div class="panel-group">
+<!-- <div class="panel-group">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
@@ -74,10 +90,10 @@
        
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- +++++++++++++++++++++++++ -->
 
-  <div class="panel-group">
+  <!-- <div class="panel-group">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
@@ -93,5 +109,5 @@
        
       </div>
     </div>
-  </div>
+  </div> -->
 {% endblock content %}
