--- a/media/app/templates/app/main.html
+++ b/media/app/templates/app/main.html
@@ -34,7 +34,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'radio' %}">Radio</a>
       </li>
-      <li class="nav-item dropdown active">
+      <!-- <li class="nav-item dropdown active">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Important Sites
         </a>
@@ -44,7 +44,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
-      </li>
+      </li> -->
       
     </ul>
     <form class="form-inline my-2 my-lg-0">
