--- a/media/app/static/css/style.css
+++ b/media/app/static/css/style.css
@@ -82,3 +82,14 @@ body {
 .mediaplayer{
     align-content: center;
 }
+
+.list{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
+li{
+    float: right;
+}
