--- a/media/app/templates/app/main.html
+++ b/media/app/templates/app/main.html
@@ -45,12 +45,24 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li> -->
-      
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <ul class="list">
+        <li class="nav-item active ">
+            <a class="nav-link" href="">Register</a>
+        </li>
+        <li class="nav-item active ">
+            <a class="nav-link" href="">Login</a>
+        </li>
+        <li class="nav-item active ">
+            <a class="nav-link" href="">Logout</a>
+        </li>
+        <li class="nav-item active ">
+            <a class="nav-link" href="">Favorite</a>
+        </li>
+    </ul>
+    
+    
+
   </div>
 </nav>
   <!-- navbar end -->
