--- a/media/app/templates/app/main.html
+++ b/media/app/templates/app/main.html
@@ -48,7 +48,7 @@
     </ul>
     <ul class="list">
         <li class="nav-item active ">
-            <a class="nav-link" href="">Register</a>
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
         </li>
         <li class="nav-item active ">
             <a class="nav-link" href="">Login</a>
