--- a/media/app/templates/app/main.html
+++ b/media/app/templates/app/main.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="{% url 'register' %}">Register</a>
         </li>
         <li class="nav-item active ">
-            <a class="nav-link" href="">Login</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
         <li class="nav-item active ">
             <a class="nav-link" href="">Logout</a>
