--- a/media/app/templates/app/register.html
+++ b/media/app/templates/app/register.html
@@ -3,9 +3,10 @@
 {% block content %}
 
 <div class="row">
-<form action="">
-{{registerform|crispy}}
-<input type="submit" value="Register">
+<form action="" method="POST">
+    {% csrf_token %}
+    {{registerform|crispy}}
+    <input type="submit" value="Register">
 </form>
 </div>
 
