--- a/media/app/templates/app/index.html
+++ b/media/app/templates/app/index.html
@@ -1,5 +1,11 @@
 {% extends 'app/main.html' %}
 {% block content %}
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-{{message.tags}}">{{message}}</div>
+
+{% endfor %}
+{%  endif %}
 
 <div class="panel-group">
     <div class="panel panel-default">
