--- a/media/app/static/css/style.css
+++ b/media/app/static/css/style.css
@@ -24,6 +24,7 @@ span{
     background-color: #000000;
     border: 1px solid #ddd;
     color: white;
+    
 }
 
 
@@ -102,4 +103,15 @@ li a {
 
 li a:hover {
   background-color: #111111;
+}
+.fav{
+    float: left;
+    
+    vertical-align: middle;
+}
+
+.linkr{
+    margin-right: 40px;
+    float: left;
+    
 }
