--- a/media/app/templates/app/main.html
+++ b/media/app/templates/app/main.html
@@ -47,18 +47,26 @@
       </li> -->
     </ul>
     <ul class="list">
+    {% if user.is_authenticated %}
         <li class="nav-item active ">
+            <span style="color:white;">Welcome {{user}}</span>
+        </li>
+        <li class="nav-item active ">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        </li>
+        <li class="nav-item active ">
+            <a class="nav-link" href="">Favorite</a>
+        </li>
+    {% else %}
+        <li>
             <a class="nav-link" href="{% url 'register' %}">Register</a>
         </li>
         <li class="nav-item active ">
             <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
-        <li class="nav-item active ">
-            <a class="nav-link" href="">Logout</a>
-        </li>
-        <li class="nav-item active ">
-            <a class="nav-link" href="">Favorite</a>
-        </li>
+
+    {% endif %}
+       
     </ul>
     
     
